@@ -1,6 +1,11 @@
 v3.4.9 (XXXX-XX-XX)
 -------------------
 
+* Fixed internal issue #656: While executing large amount of concurrent
+  insert/removes iresearch seems to leak open file handles. This results in
+  error 32 in cleanup (observed only on Windows as Linux doesn`t have file
+  sharing locks).
+
 * Fixed issue #10725: Wrong document count shown inside an empty collection in
   the web UI.
 
